# docs/swagger.json
@@ -169,6 +169,11 @@
                       "work",
                       "personal"
                     ]
+                  },
+                  "photo": {
+                    "description": "Contact's photo",
+                    "type": "string",
+                    "format": "binary"
                   }
                 }
               }
@@ -291,7 +296,7 @@
         ],
         "summary": "Get list of contacts",
         "operationId": "getContacts",
-        "description": "Get list of users with this endpoint",
+        "description": "Get list of contacts with pagination, sorting, and filtering",
         "security": [
           {
             "bearerAuth": []
@@ -319,9 +324,9 @@
             "name": "sortBy",
             "schema": {
               "type": "string",
-              "example": "isFavourite, contactType"
+              "example": "isFavourite"
             },
-            "description": "All Contacts fields "
+            "description": "Field to sort by (e.g., isFavourite, contactType)"
           },
           {
             "in": "query",
@@ -445,7 +450,6 @@
                   "name",
                   "phoneNumber",
                   "email",
-                  "isFavourite",
                   "contactType"
                 ],
                 "properties": {
@@ -477,6 +481,11 @@
                       "home",
                       "personal"
                     ]
+                  },
+                  "photo": {
+                    "description": "Contact's photo",
+                    "type": "string",
+                    "format": "binary"
                   }
                 }
               }
